# gazebo_ws

./: CHANGELOG.md  README.md  frames.gv
gazebo_ws-master (1)/gazebo_ws-master/: README.md
gazebo_ws-master (1)/gazebo_ws-master/src/car_description/config/: bicycle_controller.yaml
gazebo_ws-master (1)/gazebo_ws-master/src/car_description/urdf/: frames.gv
gazebo_ws-master (1)/gazebo_ws-master/src/controller/: CMakeLists.txt  package.xml
gazebo_ws-master (1)/gazebo_ws-master/src/controller/src/: pure_pursuit_bicycle.cpp
gazebo_ws-master (1)/gazebo_ws-master/src/mapandnav/include/: mapcone.h
gazebo_ws-master (1)/gazebo_ws-master/src/mapandnav/meshes/: blue.dae  red.stl
gazebo_ws-master (1)/gazebo_ws-master/src/perception/: CMakeLists.txt
gazebo_ws-master (1)/gazebo_ws-master/src/simlaunch/: CMakeLists.txt
src/car_description/urdf/: car.urdf.xacro
src/carstate/: CMakeLists.txt  package.xml
src/carstate/src/: main.cpp  state_converter.cpp
src/controller/: CMakeLists.txt
src/controller/src/: pure_pursuit_bicycle.cpp
src/mapandnav/: CMakeLists.txt
src/mapandnav/include/: mapcone.h
src/mapandnav/meshes/: red.dae
src/mapandnav/src/: main.cpp  mapcone.cpp
src/perception/src/: lidar_processor.cpp
src/racebot_description/: package.xml
src/racebot_description/launch/: racecar_gazebo.launch
src/racebot_description/scripts/: transform_publisher.py
src/racebot_description/urdf/: racecar.xacro
src/racecar_description/: CMakeLists.txt
src/racecar_description/config/: smart_control_config.yaml
src/racecar_description/launch/: control.launch  racebot_rviz.launch  racecar_gazebo.launch
src/racecar_description/scripts/: cmdvel2gazebo.py  teleop_racebot.py  transform_publisher.py  vehicle_pose_and_velocity_updater.py
src/racecar_description/urdf/: macros.xacro  racecar.gazebo  racecar.urdf  racecar.xacro
src/racecar_description/worlds/: my.world
src/simlaunch/: package.xml
src/simlaunch/config/: racecar.yaml
src/simlaunch/launch/: full_simulation.launch  map.launch
src/simlaunch/rviz/: my.rviz
src/simlaunch/worlds/: race_track.world
(+4 files in other folders)
